# new_camera

./: CMakeLists.txt
cmake/fetch/: OpenCV.cmake  json.cmake  spdlog.cmake  third_party.cmake
example-demo/: CMakeLists.txt  main.cpp
example-demo/UIDemo/: CMakeLists.txt  QtCameraTest.cpp  QtCameraTest.h  QtCameraTest.ui
include/: cameramanager.h  icameradevice.h
src/: CMakeLists.txt  CMakeLists.txt.bak  cameramanager.cpp  main.cpp.bak
src/UIDemo/: CMakeLists.txt  CMakeLists.txt.bak  QtCameraTest.cpp  QtCameraTest.h  QtCameraTest.h.bak  QtCameraTest.ui
src/balser/: CMakeLists.txt  balserdevice.cpp  balserdevice.h  baslercamera.cpp  baslercamera.h
src/localcam/: CMakeLists.txt  localcamera.cpp  localcamera.h
src/util/: logger.h
